fixed side scroll and alignment

--- a/src/App.css
+++ b/src/App.css
@@ -132,7 +132,6 @@ body {
 .project {
   display: flex;
   flex-direction: column;
-  padding: 0 16px;
 }
 
 /* list empty selector in the beginning */
